# FileNest

./: .gitignore  CONTRIBUTING.md  README.md  go.mod  go.sum
tasks/mnist_classifier/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
tasks/mnist_classifier/FileNest/: .gitignore
tasks/mnist_classifier/FileNest/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
tasks/mnist_classifier/FileNest/.github/workflows/: changelog.yml
tasks/mnist_classifier/FileNest/ai/: .gitkeep
tasks/mnist_classifier/FileNest/docs/: .gitkeep
tasks/mnist_classifier/FileNest/scripts/: .gitkeep
tasks/mnist_classifier/FileNest/tasks/crud/: README.md  go.mod  main.go
tasks/mnist_classifier/conf/: config.yaml
tasks/mnist_classifier/conf/model/: small_mobilenet.yaml
tasks/mnist_classifier/conf/trainer/: default.yaml
tasks/mnist_classifier/config/: config.yaml
tasks/mnist_classifier/data/: mnist.py
tasks/mnist_classifier/models/: small_mobilenet.py
tasks/mnist_classifier/src/: classifier.py  config.yaml  eval.py  model.py  raytune.py  train.py
tasks/mnist_classifier/wandb/run-20250627_213144-aam4zb9t/files/: wandb-metadata.json
tasks/mnist_classifier/wandb/run-20250627_213718-4x3vm11x/: run-4x3vm11x.wandb
tasks/mnistclass/: README.md  evaluate.py  pyproject.toml  setup.sh  train.py
tasks/mnistclass/checkpoints/: best_model.pth  checkpoint.pth
tasks/mnistclass/configs/: config.yaml
tasks/mnistclass/configs/dataset/: mnist.yaml
tasks/mnistclass/configs/model/: lightweight_cnn.yaml
tasks/mnistclass/configs/optimizer/: adam.yaml
tasks/mnistclass/src/: __init__.py  dataset.py  model.py  trainer.py  utils.py
(+466 files in other folders)
